[package]
name = "solana-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
solana-program = "1.10.13"
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
thiserror = "1.0.31"

[lib]
crate-type = ["cdylib", "lib"]
